Fix meson executable

- on my system meson is a link to python2-exec
  $ ls -ld $(which meson)
  /usr/bin/meson -> ../lib/python-exec/python-exec2
  The python2-exec must not be executed directly.
- Currently the mesonExecutable is canonicalized, which also resolves symlinks
  This causes the meson plugin to execute stuff like:
  $ python2-exec --reconfigure
  instead of
  $ meson --reconfigure
  Fix this by not canonicalizing the mesonExecutable, validity is already checked earlier.

BUG: 412477
FIXED-IN: 5.8.220400